<resources>
    <string name="app_name">RiseUp_Bussiness</string>
    <string name="riseup">Rise Up</string>
    <string name="NotRegisteredDisco">¿Tu discoteca no está registrada aún?</string>
    <string name="RegisterHere"><u>Regístrate aquí</u></string>
    <string name="registerSCMessage">Los planes y precios se mostrarán cuando se confirme tu aplicabilidad</string>
    <string name="registerinitialConfigTitle">Configuración inicial</string>
    <string name="DiscoInitialConfigName">¿Cómo quieres aparecer en la app?</string>
    <string name="ChooseFileDiscoConfig">Seleccionar archivo</string>
    <string name="DiscoListImageIC">Imagen en la lista de discotecas</string>
    <string name="DiscoMainHomePageImageIC">Imagen para la página principal</string>
    <string name="ContinueText">Continuar</string>
    <string name="WriteHereText">Escribe aquí</string>
    <string name="CreateProductsMenuTitle">Crea tu menú de licores</string>
    <string name="ProductTypeText">¿De qué tipo es el licor?</string>
    <string name="AddProductImageText">Agrega la imagen del licor</string>
    <string name="AddProductNameText">Escribe el nombre de tu bebida</string>
    <string name="AddProductPriceText">Ponle precio</string>
    <string name="WriteHereProductTypeText">Whisky, cóctel, etc</string>
    <string name="ProductMenuPrevText">Previsualiza tu menú</string>
    <string name="FinishInitialConfigText">Terminar</string>
    <string name="addProductBtn">Agregar</string>
    <string name="DeleteProductBtn">Eliminar</string>
    <string name="FinishBtnText">Terminar</string>
    <string name="config">Configuración</string>
    <string name="GeneraltTV">General</string>
    <string name="infoPersonal">Información personal</string>
    <string name="historialDiamantes">Historial de diamantes</string>
    <string name="PrivYseguridad">Privacidad y seguridad</string>
    <string name="caracteristicas">Características</string>
    <string name="permitirNotifi">Permitir Notificaciones</string>
    <string name="pagos">Pagos</string>
    <string name="idioma">Idioma</string>
    <string name="idiomasDisponibles">Idiomas disponibles</string>
    <string name="servicios">Servicios</string>
    <string name="info">Información</string>
    <string name="ayuda">Ayuda</string>
    <string name="cache">Borrar caché</string>
    <string name="appVersion">App Version - V1.0.0</string>
    <string name="Juliana">Juliana Riascos</string>
    <string name="emailTV">Correo electrónico</string>
    <string name="EmailTV">Correo electrónico</string>
    <string name="passwordTV">Contraseña</string>
    <string name="rememberMeTV">Recuérdame</string>
    <string name="forgotTV">¿Olvidaste tu contraseña?</string>
    <string name="loginBtnTV">Iniciar sesión</string>
    <string name="registerBtn">Registrarse</string>
    <string name="orTV">O</string>
    <string name="registerWithTV">Registrate con</string>
    <string name="correoIndicativo">Dirección de correo electrónico</string>
    <string name="kamcak">kamcak@hotmail.es</string>
    <string name="telInfo">Número de teléfono</string>
    <string name="tel">+573104101801</string>
    <string name="sexoInfo">Sexo</string>
    <string name="HombreET">Hombre</string>
    <string name="fechaInfo">Fecha de nacimiento</string>
    <string name="fechaNaci">02/08/2001</string>
    <string name="historial_transac">Historial de transacciones</string>
    <string name="infoHistDiamantes">Revisa en qué discotecas has redimido tus diamantes.</string>
    <string name="diezSesentaName">Espacio 10-60</string>
    <string name="FechaTitle">Fecha:</string>
    <string name="IDTitle">ID:</string>
    <string name="idNumber">52583270</string>
    <string name="idNumber2">52343530</string>
    <string name="numDiamantes">50</string>
    <string name="numDiamantes2">30</string>
    <string name="registerTitle">Registrarse</string>
    <string name="ContraseñaTittle">Contraseña</string>
    <string name="infoPasswordChange">Por favor asegúrese que su contraseña tenga al menos seis caracteres e incluir una combinación de números, letras y caracteres especiales (!&amp;%/$)</string>
    <string name="actualPass">Contraseña actual</string>
    <string name="newPass">Contraseña nueva</string>
    <string name="repeatPass">Repetir contraseña nueva</string>
    <string name="salir">Salir</string>
    <string name="oRegister">O</string>
    <string name="registerUserBtn">Registrarse</string>
    <string name="menuItemHome">Inicio</string>
    <string name="menuItemCarrito">Carrito</string>
    <string name="menuItemConfiguracion">Configuración</string>
    <string name="Confirmar">Confirmar</string>
    <string name="Transacciones">Transacciones</string>
    <string name="Tarjetas">Tarjetas</string>
    <string name="ultimos_pagos">Últimos pagos</string>
    <string name="infoNotarjetas">Aún no tienes un medio de pago configurado.</string>
    <string name="crear">Crear</string>
    <string name="addCard">Añadir tarjeta</string>
    <string name="infoAddCard">Ingresa los datos de tu tarjeta</string>
    <string name="cardNumberUserConfigAdd">1244 1234 1345 3255</string>
    <string name="titularNameTitle">Nombre del Titular</string>
    <string name="yessie">Yessie</string>
    <string name="expCard">Expiración</string>
    <string name="simulDateExpCard">02/25</string>
    <string name="numCardET">Número de Tarjeta</string>
    <string name="nameCardeET">Nombre del Titular</string>
    <string name="expCardET">Fecha de Expiración</string>
    <string name="secureCodeCardET">Código de Seguridad</string>
    <string name="sugeridos">Sugeridos</string>
    <string name="espanolLang">Español (ESP)</string>
    <string name="ingleslLang">Inglés (US)</string>
    <string name="mandarinlLang">Mandarín</string>
    <string name="fancesLang">Francés</string>
    <string name="rusolLang">Ruso</string>
    <string name="alemanLang">Alemán</string>
    <string name="politicaPrivTittle">Política de privacidad</string>
    <string name="condUso">Condiciones de uso</string>
    <string name="biblioCodAbi">Bibliotecas de código abierto</string>
    <string name="reportarProblema">Reportar un problema</string>
    <string name="CambiarCorreo">Cambiar correo electrónico</string>
    <string name="NumeroTelCambiarTitle">Número de teléfono</string>
    <string name="ingresarNumTel">Ingresa tu número de teléfono</string>
    <string name="infoNotifiSMS">Es posible que te enviemos notificaciones\n por SMS con fines de seguridad\n e inicio de sesión.</string>
    <string name="cambiar_contrasena">Cambiar contraseña</string>
    <string name="ingresar_cod_verif">Ingresar código de verificación</string>
    <string name="change_pass_instructions">Ingresa el código que te enviamos al\ncorreo <b>kamcak@hotmail.es</b></string>
    <string name="verificar">Verificar</string>
    <string name="reenviar_cod">Reenviar código</string>
    <string name="notepreocupes">No te preocupes, no será público</string>
    <string name="mujer">Mujer</string>
    <string name="hombre">Hombre</string>
    <string name="personalizado">Personalizado</string>
    <string name="nodecir">Prefiero no decir</string>
    <string name="soporteYPreguntas">Soporte y preguntas frecuentes</string>
    <string name="politicaTitulo1">1. Tipos de datos que recolectamos</string>
    <string name="politicInfoParrafo1">Recopilamos los siguientes tipos de información.\nInformación que nos envías directamente:\n\nTu nombre de usuario, contraseña y dirección de correo electrónico al registrarte en una cuenta de RiseUp.\nInformación que nos proporcionas en tu perfil de usuario (por ejemplo, nombre y apellidos, foto, número de teléfono). Esta información nos permite ayudarte a ti o a otros usuarios a estar \"localizados\" en RiseUp.\nContenido de usuario (por ejemplo, fotos, comentarios y otros materiales) que publiques en el Servicio.\nComunicaciones que mantengas con RiseUp. Por ejemplo, podemos enviarte correos electrónicos relacionados con el Servicio (como verificación de la cuenta, cambios o actualizaciones de funciones del Servicio, avisos técnicos y de seguridad). Ten en cuenta que no puedes renunciar a recibir correos electrónicos relacionados con el Servicio.</string>
    <string name="politicaTitulo2">2. Uso de tu información personal</string>
    <string name="politicInfoParrafo2">Utilizamos herramientas de análisis de terceros que nos ayudan a medir el tráfico y las tendencias de uso del Servicio. Estas herramientas recopilan la información que envió tu dispositivo o nuestro Servicio, incluidas las páginas web que visites, los complementos y otra información que nos ayude a mejorar el Servicio. Recopilamos y utilizamos esta información de análisis con información de análisis de otros Usuarios, por lo que no puede utilizarse razonablemente para identificar a cualquier Usuario individual en particular.</string>
    <string name="politicaTitulo3">3. Divulgación de tus datos personales</string>
    <string name="politicInfoParrafo3">No procederemos al alquiler o venta de la información que nos proporciones a terceros que no sean RiseUp (o el grupo de empresas del que forma parte RiseUp) sin tu consentimiento, excepto en los términos estipulados en esta Política.</string>
    <string name="infoDescargaCondUso">MEDIANTE LA DESCARGA, LA INSTALACIÓN Y/O EL USO DE LA APLICACIÓN EN SU TERMINAL MANIFIESTA EXPRESAMENTE QUE ESTÁ DE ACUERDO, CUMPLE Y ACEPTA NUESTRAS CONDICIONES DE USO Y POLÍTICA DE PRIVACIDAD.</string>
    <string name="condUsoTitulo1">1. Identidad del titular de la aplicación</string>
    <string name="condUsoInfo1">RiseUp, es una aplicación móvil de nacionalidad colombiana, inscrita en el la cámara de comercio, Libro 39811, folio 38, hoja #B-352176, inscripción n.1.</string>
    <string name="condUsoTitulo2">2. Licencia de uso de la aplicación</string>
    <string name="condUsoInfo2">JAK es el propietario y titular de todos los derechos sobre la Aplicación y, en este sentido, otorga al usuario (licenciatario) únicamente el derecho a utilizar la misma conforme a los usos para los que la misma ha sido diseñada y, en particular, conforme a lo previsto en nuestras Condiciones de uso y/o en la ley aplicable. El usuario no adquirirá a través de la descarga, instalación y/o uso de la Aplicación ningún derecho de propiedad sobre la misma.\n\nPor tanto, la mera instalación de la Aplicación implica la aceptación por parte del usuario de las Condiciones de uso correspondientes a la Aplicación. En caso contrario, no deberá utilizarla y proceder a su desinstalación de su terminal.\n\nDe igual forma, le informamos que, en cualquier momento, podrá desinstalar la Aplicación de su dispositivo mediante las distintas opciones de configuración de este.\n\nAunque la Aplicación pueda ser accesible desde fuera de Colombia, entiende y comparte que ésta está pensada para ser utilizada por cualquier persona física que cumpla las presentes Condiciones, en cualquier país o jurisdicción en los que su uso no sea contrario a las leyes o normativas locales vigentes en cada momento.\n</string>
    <string name="condUsoTitulo3">3. Aceptación del usuario</string>
</resources>