<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/linear_gradient_background"
    tools:context=".view.ConfigDiscoImagesActivity">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:id="@+id/returnToLoginICLY"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/returnToLoginICButton"
            style="@style/BackArrowButton"
            android:layout_width="48dp"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/returnToLoginICTV"
            style="@style/PoppinsBold_20"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="24dp"
            android:text="@string/registerinitialConfigTitle"
            app:layout_constraintBottom_toBottomOf="@+id/returnToLoginICButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/returnToLoginICButton"

            app:layout_constraintTop_toTopOf="@+id/returnToLoginICButton"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout

        android:gravity="center_horizontal"
        android:id="@+id/DiscoICLLY"
        android:layout_width="match_parent"
        android:layout_height="679dp"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/returnToLoginICLY">

        <TextView
            android:id="@+id/DiscoListImageICTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/DiscoListImageIC"
            android:textAlignment="center"
            android:textAppearance="@style/PoppinsRegular_14" />

        <Button
            android:id="@+id/chooseDiscoListImageBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/gradient_buttonwithoutborder"
            android:text="@string/ChooseFileDiscoConfig"
            android:textAppearance="@style/PoppinsRegular_15"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/DiscoHomeImageICTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/DiscoMainHomePageImageIC"
            android:textAlignment="center"
            android:textAppearance="@style/PoppinsRegular_14" />

        <Button
            android:id="@+id/chooseDiscoHomeImageBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient_buttonwithoutborder"
            android:text="@string/ChooseFileDiscoConfig"
            android:textAppearance="@style/PoppinsRegular_15" />

        <Button
            android:id="@+id/continueICDIBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="150dp"
            android:background="@drawable/gradient_buttonwithoutborder"
            android:drawableRight="@drawable/right_arrow"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/ContinueText"
            android:textAppearance="@style/PoppinsRegular_14" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>